Revision history for {{$dist->name}}

{{$NEXT}}

  [Prereqs]
  - Recommend Dist::Zilla::Plugin::Run (used by some projects)

3.105     2011-07-14T23:41:38Z

  - Update metadata

3.104     2011-07-05T23:36:30Z

  - Don't automatically require Test::More 0.96
  - Don't include Devel::Cover's cover_db/ in dist
  - Dump plugins to log if $ENV{DZIL_BUNDLE_DEBUG}
  - Fix regexp to match class by "Plugin" or "PluginBundle"

3.103     2011-06-22T03:07:14Z

  - Fix name of recommended plugin (PodSpellingTests not SpellingTests)

3.102     2011-06-22T03:01:05Z

  [Prereqs]
  - Dist::Zilla::Plugin::PodSpellingTests no longer a hard requirement

  [Fixes]
  - Don't overwrite CompileTests.fake_home with default if it's set in config
  - Ignore any number of Bundle prefixes from plugin names
    (to allow dynamic configuration of plugins added by bundles)
  - Improvements to tests

3.101     2011-06-16T02:52:05Z

  - Require Bootstrap::lib plugin so that it's available
  - Allow cpanm to choose best place to install (install_command)
  - Remove qw(anno forum kwalitee) from SUPPORT websites
  - Remove Test::Pod::No404s since most links are generated

3.100     2011-05-10T03:16:24Z

  - Use CheckExtraTests instead of ExtraTests to keep xt/ directory
  - Change date format (in Changes file) to W3CDTF for unambiguous dates
  - Match skip_plugins against full name or package (rather than suffix)
  - Allow blank 'releaser' attribute to skip default releaser plugin

  [Prereqs]
  - Bump required Dist::Zilla to 4.200005
  - Bump required @TestingMania to 0.010 (bug fix)

3.000     2011-04-14T05:24:45Z

  - Rework configure() to modify actual 'plugins' attribute
    so that add_plugins() and add_bundle() can be used

  [Add Dist::Zilla Plugins]
  - use InstallRelease with 'install_command' attribute
  - use @TestingMania bundle
  - use @Git bundle (instead of individual plugins)

  - Explicitly prune some non-release files