@@ -13,6 +13,6 @@ Dist::Zilla::Stash::PodWeaver = 1.001000
 Dist::Zilla::Plugin::Bootstrap::lib = 0
 [Prereqs / RuntimeRecommends]
 Dist::Zilla::Plugin::Run = 0
-Dist::Zilla::Plugin::PodSpellingTests = 0
+Dist::Zilla::Plugin::Test::PodSpelling = 2
 [%PodWeaver]
 -StopWords:include = RWSTAUNER's
